# Task

./: .env  .gitignore  README.md
ai-paraphrase-app/backend/: .env  Cargo.toml
ai-paraphrase-app/backend/src/: main.rs
ai-paraphrase-app/frontend/: .env  index.html  package-lock.json  package.json
ai-paraphrase-app/frontend/src/: App.css  App.tsx
